lab1/Test/L1-A-3-14.output
Error Type B at Line 4
Error Type A at Line 6
Error Type B at Line 13
Error Type B at Line 16
Error Type B at Line 21
Error Type B at Line 27
